<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:icon="@drawable/navigation_profile"
        android:title="@string/navigationItemProfile" />
    <item
        android:icon="@drawable/navigation_profile"
        android:title="@string/navigationItemStartPage" />
    <item
        android:icon="@drawable/navigation_favorite"
        android:title="@string/navigationItemFavorite" />
    <item
        android:icon="@drawable/navigation_rover"
        android:title="@string/navigationItemRover" />
    <item
        android:icon="@drawable/navigation_insight"
        android:title="@string/navigationItemInsight" />
    <item
        android:icon="@drawable/navigation_mars"
        android:title="@string/navigationItemAboutMars" />
</menu>