<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/insightDate"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="center"
            android:text="@string/insightSelectDateVisual"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/insightMarsDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/insightSolMarsVisual"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>

        <TextView
            android:id="@+id/insightSeason"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/insightSeasonVisual"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>